--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -76,3 +76,54 @@ form.link, form.button {
     border-bottom: 0;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+textarea:focus, input:focus{
+    outline: 0;
+}
+
+label {
+  font-weight: bold;
+  font-size: 20px;
+  display: block;
+  margin: 20px;
+}
+
+.input_wrapper {
+  margin-top: 20px;
+}
+
+input[type="number"], input[type="textarea"], input[type="text"], input[type="email"], input[type="number"]:active {
+  font-size: 20px;
+  text-align: center;
+  border: 2px solid #000;
+  padding: 10px;
+  width: 225px;
+}
+
+input[type="textarea"] {
+  width: 100%;
+  text-align: left;
+  font-weight: normal;
+  font-size: 18px;
+}
+
+input[type="email"] {
+  font-size: 18px;
+}
+
+input[type="submit"] {
+  width: 265px;
+  padding: 15px;
+  border-color:; #cc0000;
+  background-color: #fff;
+}
